open more packages for sorted result tree